# gridlockhackathon

./: .gitattributes  .gitignore  Dockerfile  README.md  inspect_leakage.py  main.py  pyproject.toml  requirements.txt  run_pipeline.py  vercel.json
dashboard/: app.py  index.html
evaluation/: compile_executive_dashboard.py  compile_validation_report.py  diagnose_regression.py  draw_architecture.py  error_analysis.py  experiment_regressors.py  generate_feature_importance.py  generate_reports.py  generate_validation_metrics.py  inference_benchmark.py  interpretability.py  metrics.py  monitoring.py  xai_explainer.py
feature_engineering/: encoders.py  graph_features.py  historical_stats.py  interactions.py  spatial_features.py  text_features.py  time_features.py
inference/: decision_engine.py  predict.py  similarity.py
models/: .gitkeep
preprocessing/: cleaning.py  target_engineering.py  validation.py
reports/: automatic_insight_report.md  data_audit_report.md  duration_model_diagnostic.md  error_analysis_report.md  feature_importance.md  hackathon_dashboard.md  local_explanations_congestion.pkl  local_explanations_duration.pkl  local_explanations_road_closure.pkl  local_explanations_severity.pkl  model_comparison_report.md  performance_benchmark.md  validation_report.md
reports/regression/: duration_model_validation.md  largest_errors.md
reports/xai/: xai_report.md
training/: ensemble.py  optimize.py  selection.py  train_primary.py  train_regression.py  train_secondary.py
utils/: calibration.py  db.py  helpers.py  pdf_generator.py  transformer.py
