[project]
name = "gridlockhackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "catboost>=1.2",
    "joblib>=1.3",
    "lightgbm>=4.0",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "optuna>=3.5",
    "pandas>=2.0",
    "scikit-learn==1.4.2",

    "scipy>=1.10",
    "shap>=0.44",
    "xgboost>=1.7",
    "pymongo>=4.0",
    "dnspython>=2.0",
    "python-dotenv>=1.0",
]

